# solidexpress

./: .gitignore  CMakeLists.txt  Makefile  README.md  THIRD_PARTY.md
.cursor/rules/: gdscript-click-driven-tests.mdc
build-bool/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
build-bool/sxkernel/: CTestTestfile.cmake  cmake_install.cmake
build-io/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
build-io/sxkernel/: CTestTestfile.cmake  cmake_install.cmake
docs/: education-research.md
docs/howto/: direct-edit.md  edit-history.md  extrude-letter-a.md  extrude-s-shape.md  horizontal-hole.md  multi-sketch-merge.md  place-and-orbit.md  sketch-edit-in-out.md  stack-three-blocks.md  visual-sketch-tools.md
docs/plan/: STATUS.md  implementation-plan.md
docs/survey/: README.md  feature-matrix.md  interaction-patterns.md  master-feature-list.md
docs/survey/profiles/: catia.md  creo.md  fusion.md  inventor.md  nx.md  onshape.md  solidworks.md
docs/voice/: commands.gbnf  intent_schema.md  phrases.json  validate_phrases.py
game/: icon.png.import  project.godot  sxcore.gdextension  sxcore.gdextension.uid
game/branding/: generate_icon.py  icon-512.png.import
game/canyon_hdri/: LICENSE.txt  README.md
game/canyon_hdri/resources/: CanyonLightingWorldEnvironment.tscn  CanyonReflectionWorldEnvironment.tscn  canyon_floor_sky.gdshader  canyon_floor_sky.gdshader.uid  canyon_lighting_environment.tres  canyon_lighting_sky.tres  canyon_reflection_environment.tres  canyon_reflection_sky.tres
game/canyon_hdri/textures/: canyon_lighting_4k.hdr.import  canyon_reflection_4k.hdr.import
game/scenes/: main.tscn
game/scripts/: assembly_panel.gd  assembly_panel.gd.uid  document_view.gd  document_view.gd.uid  help_overlay.gd  help_overlay.gd.uid  main.gd  main.gd.uid  measure_overlay.gd  measure_overlay.gd.uid  ops_panel.gd  ops_panel.gd.uid  orbit_camera.gd  orbit_camera.gd.uid  origin_triad_hud.gd  origin_triad_hud.gd.uid  palette_button.gd  palette_button.gd.uid  path_overlay.gd  path_overlay.gd.uid  property_panel.gd  property_panel.gd.uid  shortcuts.gd  shortcuts.gd.uid  sketch_context_chrome.gd  sketch_context_chrome.gd.uid  sketch_mode.gd  sketch_mode.gd.uid  sketch_pad_overlay.gd  sketch_pad_overlay.gd.uid  timeline_panel.gd  timeline_panel.gd.uid  transform_hud.gd  transform_hud.gd.uid  ui_icons.gd  ui_icons.gd.uid  ui_scroll.gd  ui_scroll.gd.uid  variables_panel.gd  variables_panel.gd.uid  (+12 more)
game/tests/: movie_maker_run_one.gd  movie_maker_run_one.gd.uid  run_assembly_tests.gd  run_assembly_tests.gd.uid  run_camera_tests.gd  run_camera_tests.gd.uid  run_display_tests.gd  run_display_tests.gd.uid  run_drag_tests.gd  run_drag_tests.gd.uid  run_film_caption_tests.gd  run_film_caption_tests.gd.uid  run_film_loft_ui_tests.gd  run_film_loft_ui_tests.gd.uid  run_film_manifest_smoke.gd  run_film_manifest_smoke.gd.uid  run_help_tests.gd  run_help_tests.gd.uid  run_howto_tests.gd  run_howto_tests.gd.uid  run_icon_tests.gd  run_icon_tests.gd.uid  run_infer_tests.gd  run_infer_tests.gd.uid  run_layout_tests.gd  run_layout_tests.gd.uid  run_mate_tests.gd  run_mate_tests.gd.uid  run_measure_overlay_tests.gd  run_measure_overlay_tests.gd.uid  run_menu_tests.gd  run_menu_tests.gd.uid  run_move_snap_tests.gd  run_move_snap_tests.gd.uid  run_place_tests.gd  run_place_tests.gd.uid  run_property_tests.gd  run_property_tests.gd.uid  run_select_tests.gd  run_select_tests.gd.uid  (+29 more)
game/tests/films/: film_extrude_cylinder.gd  film_extrude_cylinder.gd.uid  film_extrude_s_shape.gd  film_extrude_s_shape.gd.uid  film_loft_profiles.gd  film_loft_profiles.gd.uid  film_path_merge_sweep.gd  (+11 more)
scripts/: sx-movies
sxcore/: CMakeLists.txt
sxcore/src/: register_types.cpp  sx_document.cpp  sx_document.hpp  sx_sketch.cpp  sx_sketch.hpp  sx_voice.cpp  sx_voice.hpp  sx_voice_stt.cpp  sx_voice_stt.hpp
sxkernel/: CMakeLists.txt
sxkernel/include/sx/: cards.hpp  command.hpp  commands_basic.hpp  commands_boolean.hpp  commands_draft.hpp  commands_dress.hpp  commands_graph.hpp  commands_hole.hpp  commands_hollow.hpp  commands_sketch.hpp  commands_sweep.hpp  commands_transform.hpp  context.hpp  curves.hpp  datum.hpp  document.hpp  drawings.hpp  entity.hpp  features.hpp  ids.hpp  instances.hpp  interop.hpp  log.hpp  materials.hpp  mates.hpp  measure.hpp  naming.hpp  pick.hpp  shape_utils.hpp  sketch.hpp  sketch_json.hpp  sketch_tools.hpp  solver.hpp  sxp.hpp  tessellate.hpp  thread_standards.hpp  variables.hpp  voice.hpp
sxkernel/src/: cards.cpp  command.cpp  commands_basic.cpp  commands_boolean.cpp  commands_draft.cpp  commands_dress.cpp  commands_graph.cpp  commands_hole.cpp  commands_hollow.cpp  commands_sketch.cpp  commands_sweep.cpp  commands_transform.cpp  context.cpp  curves.cpp  datum.cpp  document.cpp  drawings.cpp  entity.cpp  features.cpp  ids.cpp  instances.cpp  interop.cpp  log.cpp  materials.cpp  mates.cpp  measure.cpp  naming.cpp  pick.cpp  shape_utils.cpp  sketch.cpp  sketch_json.cpp  sketch_tools.cpp  solver_planegcs.cpp  sxp.cpp  tessellate.cpp  thread_standards.cpp  variables.cpp  voice.cpp
sxkernel/tests/: test_body_props.cpp  test_booleans.cpp  test_cards.cpp  test_commands.cpp  test_configurations.cpp  test_context.cpp  test_curves.cpp  test_datum.cpp  test_datum_cards.cpp  test_datum_doc.cpp  test_document.cpp  test_draft.cpp  test_drawings.cpp  test_dress.cpp  test_extrude.cpp  test_features.cpp  test_features_helix.cpp  test_features_hole.cpp  test_features_import.cpp  test_features_ops.cpp  test_features_order.cpp  test_features_sweep.cpp  test_features_thread.cpp  test_hole.cpp  test_hollow.cpp  test_ids.cpp  test_instances.cpp  test_interop.cpp  test_materials.cpp  test_mates.cpp  test_measure.cpp  test_naming.cpp  test_pick.cpp  test_sketch.cpp  test_sketch_construction.cpp  test_sketch_tools.cpp  test_sweep.cpp  test_sxp.cpp  test_tessellate.cpp  test_thread_standards.cpp  (+3 more)
sxvoice/: CMakeLists.txt
sxvoice/include/sx/: voice_stt.hpp
sxvoice/src/: voice_stt.cpp
sxvoice/tests/: test_voice_stt.cpp
tools/whisper/: .gitignore
(+16 files in other folders)
